--- a/AndroidGoogleDrive/packages.config
+++ b/AndroidGoogleDrive/packages.config
@@ -4,6 +4,7 @@
   <package id="Google.Apis.Auth" version="1.13.1" targetFramework="monoandroid60" />
   <package id="Google.Apis.Core" version="1.13.1" targetFramework="monoandroid60" />
   <package id="Google.Apis.Drive.v3" version="1.13.1.525" targetFramework="monoandroid60" />
+  <package id="Google.Apis.Oauth2.v2" version="1.13.1.518" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
